# FRAMEWORKS

MEAN-App/backend/: server.js
MEAN-App/backend/models/: Reservation.js
MEAN-App/backend/routes/: accountRoutes.js  auth.js  productRoutes.js  reservationRoutes.js
MEAN-App/frontend/: package-lock.json
MEAN-App/frontend/src/app/: app.component.html  app.module.ts
MEAN-App/frontend/src/app/components/beneficiary-dashboard/: beneficiary-dashboard.component.html  beneficiary-dashboard.component.spec.ts  beneficiary-dashboard.component.ts
MEAN-App/frontend/src/app/components/donor-dashboard/: donor-dashboard.component.html  donor-dashboard.component.ts
MEAN-App/frontend/src/app/components/register/: register.component.html  register.component.ts
MEAN-App/frontend/src/app/services/: api.service.spec.ts  api.service.ts
MEVN-App/backend/: server.js
MEVN-App/backend/models/: Account.js  Product.js  Token.js
MEVN-App/backend/routes/: accountRoutes.js
MEVN-App/frontend/: package-lock.json  package.json
MEVN-App/frontend/src/assets/: style.css
MEVN-App/frontend/src/pages/: BeneficiaryDashboard.vue  DonorDashboard.vue  Login.vue  Register.vue
MEVN-App/frontend/src/router/: index.js
MEVN-App/frontend/src/services/: api.js
RALS/backend/: Cargo.toml
RALS/backend/src/: db.rs  main.rs  state.rs
RALS/backend/src/models/: account.rs
RALS/backend/src/routes/: account.rs
RALS/frontend-leptos/: Cargo.toml  Trunk.toml  index.html
RALS/frontend-leptos/src/: lib.rs
RALS/frontend-leptos/src/pages/: register.rs
