[package]
name = "frontend_leptos"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.6", features = ["csr"] }
leptos_router = "0.6"
leptos_meta = "0.6"
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"

[lib]
name = "frontend_lib"
crate-type = ["cdylib"]  # <-- required

[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"
